--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,16 @@ ci = [
   'dephell_licenses'
 ]
 
+docs = [
+    "myst_parser==4.0.1",
+    "nbsphinx==0.9.7",
+    "sphinx_autodoc_typehints==3.0.1",
+    "sphinx_book_theme==1.1.4",
+    "sphinx-copybutton==0.5.2",
+    "toml==0.10.2",
+    "sphinx==8.1.3",
+]
+
 [release]
 app_name = 'EasyReflectometryApp'
 family_name = 'EasyReflectometryApp'
