--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ requires-python = '>=3.11'
 dependencies = [
   'EasyApp @ git+https://github.com/EasyScience/EasyApp.git@get-rid-of-qt5compat',
   'easyreflectometry',
-  'PySide6',
+  'PySide6>=6.8,<6.9', # Issue with TableView formatting in 6.9,
   'toml',
 ]
 
