Runs test mode using cloned EasyApp

--- a/.github/workflows/installer.yml
+++ b/.github/workflows/installer.yml
@@ -83,8 +83,10 @@ jobs:
       - name: Run app in testmode and quit
         shell: bash
         run: |
+          cd ..
+          git clone --single-branch --branch get-rid-of-qt5compat https://github.com/easyscience/EasyApp.git
           cd EasyReflectometryApp
-          python main.py --testmode
+          python EasyReflectometryApp/main.py --testmode
 
       - name: Create freezed python app bundle with PyInstaller
         run: python ${{ env.SCRIPTS_PATH }}/FreezeApp.py
