--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 
 requires-python = '>=3.11'
 dependencies = [
-  'EasyApp',
+  'EasyApp @ git+https://github.com/EasyScience/EasyApp.git',
   'easyreflectometry',
   'PySide6>=6.8,<6.9', # Issue with TableView formatting in 6.9,
   'toml',
