--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,9 @@ classifiers = [
 
 requires-python = '>=3.11'
 dependencies = [
-  'EasyApp @ git+https://github.com/EasyScience/EasyApp.git@develop',
+  'EasyApp @ git+https://github.com/EasyScience/EasyApp.git',
   'easyreflectometry',
-  'PySide6',
+  'PySide6>=6.8,<6.9', # Issue with TableView formatting in 6.9,
   'toml',
 ]
 
