--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = 'hatchling.build'
 
 [project]
 name = 'EasyReflectometryApp'
-version = '1.1.0'
-release_data = '01 May 2025'
+version = '1.1.1'
+release_data = '28 May 2025'
 description = "Making reflectometry data analysis and modelling easy."
 authors = [
     {name = "Andrew R. McCluskey"}, 
@@ -41,7 +41,8 @@ dependencies = [
 ci = [
   'pyinstaller',
   'licensename',
-  'dephell_licenses'
+  'dephell_licenses',
+  'charset-normalizer<3.2',
 ]
 
 docs = [
